examples/test/testpolicy6727.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6727
  namespace: namespace77
spec:
  podSelector:
    matchLabels:
      key42: value30
      key24: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value34
          key18: value10
          key17: value48
      podSelector:
        matchLabels:
          key0: value30
          key17: value0
          key26: value13
